* Li's version of tpcc (with support to top-key stats)